[gd_scene load_steps=8 format=3 uid="uid://bmymcla08yo51"]

[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://assets/Fonts/pixelmix.ttf" id="1_2dhbq"]
[ext_resource type="Script" path="res://main_menu/missions_tab.gd" id="1_5a3hb"]
[ext_resource type="Texture2D" uid="uid://dd2vfdo18d4tf" path="res://assets/Icons/Menu/planet_marker.png" id="2_87oxx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8r476"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq8e6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvoic"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsf3s"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
corner_detail = 1

[node name="missions_tab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5a3hb")

[node name="content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentMarginContainer" type="MarginContainer" parent="content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="content/ContentMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Title" type="Control" parent="content/ContentMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Label" type="Label" parent="content/ContentMarginContainer/VBoxContainer/Title"]
layout_mode = 2
offset_right = 1792.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0.219608, 0.4, 0.745098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 64
text = "Select mission"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="content/ContentMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="content/ContentMarginContainer/VBoxContainer/Buttons/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="content/ContentMarginContainer/VBoxContainer/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="VBoxContainer" type="VBoxContainer" parent="content/ContentMarginContainer/VBoxContainer/Buttons/MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -96.0
offset_right = 182.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Mission1Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Buttons/MarginContainer/HBoxContainer/Control/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 1 
"

[node name="Mission2Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Buttons/MarginContainer/HBoxContainer/Control/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 2 "

[node name="Control2" type="Control" parent="content/ContentMarginContainer/VBoxContainer/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="HBoxContainer" type="HBoxContainer" parent="content/ContentMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="mission_description" type="Control" parent="content/ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/HBoxContainer/mission_description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_bottom = 96

[node name="ColorRect" type="ColorRect" parent="content/ContentMarginContainer/VBoxContainer/HBoxContainer/mission_description/MarginContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0.709804)

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/HBoxContainer/mission_description/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="mission_label" type="Label" parent="content/ContentMarginContainer/VBoxContainer/HBoxContainer/mission_description/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control2" type="Control" parent="content/ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="content/ContentMarginContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_nvoic")
theme_override_styles/normal = SubResource("StyleBoxFlat_hsf3s")
text = " Back "

[node name="mission_marker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1178.0
offset_top = 527.0
offset_right = 1589.0
offset_bottom = 769.0

[node name="MissionTextureRect" type="TextureRect" parent="mission_marker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_87oxx")

[node name="InfiniteLandingPosition" type="Control" parent="mission_marker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 100.0
offset_right = -269.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
